# dotfiler

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: config.toml
examples/dotfiles/: xresources
examples/dotfiles/scripts/: DummyScript
examples/scripts/: test.py
examples/templates/: config  db.sqlite
src/: add_template.rs  common.rs  dotfiles.rs  error.rs  filesystem.rs  main.rs  scripts.rs  sqldbs.rs  stylish_templater.rs  template_creator.rs  templates.rs  utilities.rs
